--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   mobx: ^2.0.5
-  flutter_mobx: ^2.0.2
+  dio:
+  hexcolor: ^2.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flutter_mobx: ^2.0.2
+  mobx_codegen:
+  build_runner:
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -63,7 +66,7 @@ flutter:
   assets:
     # assets-generator-begin
     # assets/*
-    - assets/Pokemon_Logo.png
+    - assets/404px-International_Pokémon_logo.svg.png
     # assets-generator-end
 
   # An image asset can refer to one or more resolution-specific "variants", see
