--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   mobx: ^2.0.5
   dio:
+  cached_network_image: ^3.1.0+1
+  infinite_scroll_pagination: ^3.1.0
 
 dev_dependencies:
   flutter_test:
