--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,8 @@ flutter:
   assets:
     # assets-generator-begin
     # assets/*
-    - assets/404px-International_Pokémon_logo.svg.png
+    - assets/logo.png
+    - assets/pokeballError.png
     # assets-generator-end
 
   # An image asset can refer to one or more resolution-specific "variants", see
