--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: projeto_estagio
-description: A new Flutter project.
+name: pokedex_estagio
+description: Uma pokedex usando mobx, dio, animations.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -39,6 +39,7 @@ dependencies:
   cached_network_image: ^3.1.0+1
   flutter_svg:
   skeleton_text:
+
 
 dev_dependencies:
   flutter_test:
