--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.projeto_estagio">
+    package="com.example.pokedex_estagio">
    <application
-        android:label="projeto_estagio"
+        android:label="pokedex_estagio"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
